--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "method-override": "^3.0.0",
+    "moment": "^2.30.1",
     "pg": "^8.11.3"
   }
 }
